update LPA type template

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -89,8 +89,10 @@
     "whichTypeOfLpaToMake": "Pa fath o LPA ydych chi am ei wneud?",
     "whichTypeOfLpaToMakeContent": "<p class=\"govuk-body\">Mae 2 fath o LPA:</p><ul class=\"govuk-list govuk-list--bullet\"><li>eiddo a materion ariannol</li><li>iechyd a lles</li></ul><p class=\"govuk-body\">Gallwch gael un neu'r ddau.</p><p class=\"govuk-body\">Nid oes rhaid iddynt gael eu gwneud ar yr un pryd. Gallwch ailddefnyddio unrhyw wybodaeth i wneud LPAs eraill yn hwyrach.</p><p class=\"govuk-body\">Gallwch ddewis gwahanol bobl i fod yn atwrneiod i chi ar gyfer pob LPA.</p><p class=\"govuk-body\"><a class=\"govuk-link\" href=\"#\">Dysgwch fwy am y 2 fath o LPAs</a></p>",
     "lpaTypePfa": "Eiddo a materion ariannol",
+    "lpaTypePfaHumanised": "Welsh",
     "lpaTypePfaHint": "Welsh",
     "lpaTypeHw": "Iechyd a lles",
+    "lpaTypeHwHumanised": "Welsh",
     "lpaTypeHwHint": "Welsh",
     "lpaTypeBoth": "Y ddau",
     "selectLpaType": "Welsh",
