--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -123,11 +123,11 @@
         "many": "Welsh {{.PluralCount}} welsh",
         "other": "Welsh {{.PluralCount}} welsh"
     },
-    "changeNameLinkText": "Change<span class=\"govuk-visually-hidden\"> name for {{ .FirstNames }} {{ .LastName }}</span>",
-    "changeDOBLinkText": "Change<span class=\"govuk-visually-hidden\"> date of birth for {{ .FirstNames }} {{ .LastName }}</span>",
-    "changeEmailLinkText": "Change<span class=\"govuk-visually-hidden\"> email for {{ .FirstNames }} {{ .LastName }}</span>",
-    "changeAddressLink": "Change<span class=\"govuk-visually-hidden\"> address for {{ .FirstNames }} {{ .LastName }}</span>",
-    "removeAttorneyButtonLink": "Remove attorney {{ .AttorneyNumber }}<span class=\"govuk-visually-hidden\"> {{ .FirstNames }} {{ .LastName }}</span>",
+    "changeNameLinkText": "Welsh<span class=\"govuk-visually-hidden\"> welsh {{ .FirstNames }} {{ .LastName }}</span>",
+    "changeDOBLinkText": "Welsh<span class=\"govuk-visually-hidden\"> welsh {{ .FirstNames }} {{ .LastName }}</span>",
+    "changeEmailLinkText": "Welsh<span class=\"govuk-visually-hidden\"> welsh {{ .FirstNames }} {{ .LastName }}</span>",
+    "changeAddressLink": "Welsh<span class=\"govuk-visually-hidden\"> welsh {{ .FirstNames }} {{ .LastName }}</span>",
+    "removeAttorneyButtonLink": "Welsh {{ .FirstNames }} {{ .LastName }}",
     "doYouWantToAddAnotherAttorney": "Welsh?",
     "selectAddMoreAttorneys": "Welsh",
     "removeAnAttorney": "Welsh",
