update radios for how should attorneys make decisions

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -340,11 +340,14 @@
     "howShouldAttorneysMakeDecisionsDetail": "Welsh",
     "getHelpMakingDecision": "Welsh",
     "jointlyAndSeverally": "Welsh",
-    "jointlyAndSeverallyHintAttorneys": "Welsh",
+    "jointlyAndSeverallyHumanised": "{{.AllAttorneysFirstNames}} welsh",
+    "jointlyAndSeverallyHint": "<p>Welsh {{.AllAttorneysFirstNames}}</p><p>Welsh</p>",
     "jointly": "Welsh",
-    "jointlyHintAttorneys": "Welsh",
+    "jointlyHumanised": "{{.AllAttorneysFirstNames}} welsh",
+    "jointlyHintAttorneys": "<p>Welsh {{.AllAttorneysFirstNames}}</p><p>Welsh {{.AllAttorneysFirstNames}}</p><p>Welsh</p>",
     "jointlyAndSeverallyMixed": "Welsh",
-    "jointlyAndSeverallyMixedHintAttorneys": "Welsh",
+    "jointlyAndSeverallyMixedHumanised": "{{.AllAttorneysFirstNames}} Welsh",
+    "jointlyAndSeverallyMixedHint": "<p>Welsh {{.AllAttorneysFirstNames}}</p><p>Welsh</p><p>Welsh</p>",
     "decisionDetailsHint": "Welsh",
     "details": "Welsh",
     "chooseADecisionType": "Welsh",
