--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -320,11 +320,14 @@
     "howShouldAttorneysMakeDecisionsDetail": "Your choice here is very important as it affects how your LPA can be used. Whichever option you choose, your attorneys must always act in your best interests.",
     "getHelpMakingDecision": "Get help with making this decision",
     "jointlyAndSeverally": "Together (Jointly and severally)",
-    "jointlyAndSeverallyHintAttorneys": "Attorneys can make decisions on their own or together. Most people choose this option because it's the most practical.",
+    "jointlyAndSeverallyHumanised": "{{.AllAttorneysFirstNames}} can make decisions together or on their own",
+    "jointlyAndSeverallyHint": "<p>Most people choose this option as it's the most practical. It also means {{.AllAttorneysFirstNames}} can share tasks and responsibilities between them.</p><p>In legal terms, this is know as your attorneys working 'jointly and severally'.</p>",
     "jointly": "Jointly",
-    "jointlyHintAttorneys": "Attorneys must agree unanimously on every decision, however big or small. Be careful - if one of the attorneys can no longer act, none of the other attorneys will be able to act either, unless you state otherwise in your instructions.",
+    "jointlyHumanised": "{{.AllAttorneysFirstNames}} must and agree make all decisions together",
+    "jointlyHintAttorneys": "<p>This means {{.AllAttorneysFirstNames}} must make all decisions together, however big or small. They must both agree on every decision.</p><p>This is the least popular option, because it can make the LPA harder to use. For example, if {{.AllAttorneysFirstNames}} cannot agree on a decision, it cannot be made without going to court.</p><p>In legal terms, this is know as your attorneys working 'jointly'.</p>",
     "jointlyAndSeverallyMixed": "Jointly for some decisions, and jointly and severally for other decisions",
-    "jointlyAndSeverallyMixedHintAttorneys": "Attorneys must agree unanimously on some decisions, but can make others on their own. You must state which decisions need to be agreed unanimously.",
+    "jointlyAndSeverallyMixedHumanised": "{{.AllAttorneysFirstNames}} must make certain decisions together",
+    "jointlyAndSeverallyMixedHint": "<p>You choose certain decisions that {{.AllAttorneysFirstNames}} must agree on and make together. They can make all other decisions together or on their own.</p><p>If they cannot agree on a decision you've said they must may together, they will have to go to court so a judge can decide.</p><p>In legal terms, this is know as your attorneys working 'jointly for some decisions, and jointly and severally for others'.</p>",
     "decisionDetailsHint": "Please tell us which decisions you want to be made jointly. Take a look at the guidance for examples of how you can make your wishes clear.",
     "details": "Details",
     "chooseADecisionType": "Select from the listed decision options",
