--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -24,6 +24,8 @@
     "answerLater": "Answer later",
     "willDoThisLater": "I will do this later",
     "pfa": "Finances and affairs",
+    "yes": "Yes",
+    "no": "No",
 
     "yourDetails": "Your details",
     "firstNames": "First names",
@@ -139,12 +141,14 @@
     "wantReplacementAttorneys": "Do you want any replacement attorneys?",
     "replacementAttorneysStepIn": "Replacement attorneys step in if one of your original attorneys dies or has to step down from the role.",
     "replacementAttorneysStepInExplanation": {
-        "one": "Having replacement attorneys is optional, however, having 1 or more helps make sure your LPA will keep working if {{ .AttorneysFullNames }} (your original attorney) has to step down.",
-        "other": "Having replacement attorneys is optional, however, having 1 or more helps make sure your LPA will keep working if {{ .AttorneysFullNames }} (your original attorneys) have to step down."
+        "one": "Having replacement attorneys is optional. However, having 1 or more helps make sure your LPA will keep working if {{ .AttorneysFullNames }} (your original attorney) has to step down.",
+        "other": "Having replacement attorneys is optional. However, having 1 or more helps make sure your LPA will keep working if {{ .AttorneysFullNames }} (your original attorneys) have to step down."
     },
     "replacementAttorneyRequirements": "A replacement attorney must meet the same requirements as an original attorney. This includes being 18 or over.",
-    "yes": "Yes",
-    "no": "No",
+    "findOutMoreAboutReplacementAttorneysContent": "<p class=\"govuk-body\"><a href=\"#\">Find out more about replacement attorneys</a></p>",
+
+    "yesReplacementAttorneys": "Yes, I want replacement attorneys",
+    "noReplacementAttorneys": "No, I do not want replacement attorneys",
     "selectWantReplacementAttorneys": "Select whether you want any replacement attorneys",
     "replacementAttorneys": "Replacement attorneys",
 
