make check lpa attorney decision choice friendlier and change button to confirm

--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -26,6 +26,7 @@
     "pfa": "Welsh",
     "yes": "Ydw",
     "no": "Na",
+    "confirm": "Welsh",
 
     "yourDetails": "Eich manylion",
     "firstNames": "Enwau cyntaf",
@@ -346,13 +347,10 @@
     "howShouldAttorneysMakeDecisions": "Welsh?",
     "howShouldAttorneysMakeDecisionsDetail": "Welsh",
     "getHelpMakingDecision": "Welsh",
-    "jointlyAndSeverally": "Welsh",
     "jointlyAndSeverallyHumanised": "{{.AllAttorneysFirstNames}} welsh",
     "jointlyAndSeverallyHint": "<p>Welsh {{.AllAttorneysFirstNames}}</p><p>Welsh</p>",
-    "jointly": "Welsh",
     "jointlyHumanised": "{{.AllAttorneysFirstNames}} welsh",
     "jointlyHintAttorneys": "<p>Welsh {{.AllAttorneysFirstNames}}</p><p>Welsh {{.AllAttorneysFirstNames}}</p><p>Welsh</p>",
-    "jointlyAndSeverallyMixed": "Welsh",
     "jointlyAndSeverallyMixedHumanised": "{{.AllAttorneysFirstNames}} Welsh",
     "jointlyAndSeverallyMixedHint": "<p>Welsh {{.AllAttorneysFirstNames}}</p><p>Welsh</p><p>Welsh</p>",
     "decisionDetailsHint": "Welsh",
@@ -394,6 +392,7 @@
     "provideDetailsOfWhenToStepIn": "Welsh",
 
     "jointly-and-severally": "Welsh",
+    "jointly": "Welsh",
     "mixed":                 "Welsh",
     "when-registered":       "Welsh",
     "when-capacity-lost":    "Welsh",
