--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -26,6 +26,7 @@
     "pfa": "Finances and affairs",
     "yes": "Yes",
     "no": "No",
+    "confirm": "Confirm",
 
     "yourDetails": "Your details",
     "firstNames": "First names",
@@ -225,7 +226,7 @@
         "one": "Who is your attorney",
         "other": "Who are your attorneys"
     },
-    "howTheAttorneysMustWorkTogether": "How your attorneys must work together",
+    "howTheAttorneysMustWorkTogether": "How your attorneys must make decisions",
     "whoAreTheReplacementAttorneys": {
         "one": "Who is your replacement attorney",
         "other": "Who are your replacement attorneys"
@@ -327,13 +328,10 @@
     "howShouldAttorneysMakeDecisions": "How do you want your attorneys to make decisions?",
     "howShouldAttorneysMakeDecisionsDetail": "Your choice here is very important as it affects how your LPA can be used. Whichever option you choose, your attorneys must always act in your best interests.",
     "getHelpMakingDecision": "Get help with making this decision",
-    "jointlyAndSeverally": "Together (Jointly and severally)",
     "jointlyAndSeverallyHumanised": "{{.AllAttorneysFirstNames}} can make decisions together or on their own",
     "jointlyAndSeverallyHint": "<p>Most people choose this option as it's the most practical. It also means {{.AllAttorneysFirstNames}} can share tasks and responsibilities between them.</p><p>In legal terms, this is know as your attorneys working 'jointly and severally'.</p>",
-    "jointly": "Jointly",
     "jointlyHumanised": "{{.AllAttorneysFirstNames}} must and agree make all decisions together",
     "jointlyHintAttorneys": "<p>This means {{.AllAttorneysFirstNames}} must make all decisions together, however big or small. They must both agree on every decision.</p><p>This is the least popular option, because it can make the LPA harder to use. For example, if {{.AllAttorneysFirstNames}} cannot agree on a decision, it cannot be made without going to court.</p><p>In legal terms, this is know as your attorneys working 'jointly'.</p>",
-    "jointlyAndSeverallyMixed": "Jointly for some decisions, and jointly and severally for other decisions",
     "jointlyAndSeverallyMixedHumanised": "{{.AllAttorneysFirstNames}} must make certain decisions together",
     "jointlyAndSeverallyMixedHint": "<p>You choose certain decisions that {{.AllAttorneysFirstNames}} must agree on and make together. They can make all other decisions together or on their own.</p><p>If they cannot agree on a decision you've said they must may together, they will have to go to court so a judge can decide.</p><p>In legal terms, this is know as your attorneys working 'jointly for some decisions, and jointly and severally for others'.</p>",
     "decisionDetailsHint": "Please tell us which decisions you want to be made jointly. Take a look at the guidance for examples of how you can make your wishes clear.",
@@ -371,8 +369,9 @@
     "selectWhenToStepIn": "Select when your replacement attorneys should step in",
     "provideDetailsOfWhenToStepIn": "Provide details on how your replacement attorneys should step in",
 
-    "jointly-and-severally": "Jointly and severally",
-    "mixed":                 "Jointly for some decisions, and jointly and severally for other decisions",
+    "jointly-and-severally": "<p class=\"govuk--body\">Your attorneys can make decisions together or on their own.</p> <p class=\"govuk--body\">In legal terms, this is know as your attorneys working 'jointly and severally'.</p>",
+    "jointly": "<p class=\"govuk--body\">Your attorneys must and agree make and agree all decisions together.</p> <p class=\"govuk--body\">In legal terms, this is know as your attorneys working 'jointly'</p>",
+    "mixed":                 "<p class=\"govuk--body\">Your attorneys must make certain decisions together.</p> <p class=\"govuk--body\">In legal terms, this is know as your attorneys working 'jointly for some decisions and jointly and severally for others'.</p>",
     "when-registered":       "As soon as it's registered",
     "when-capacity-lost":    "Only when I do not have mental capacity",
 
