--- a/app/lang/cy.json
+++ b/app/lang/cy.json
@@ -233,7 +233,8 @@
     "selectHappyToShareLpa": "Welsh",
     "checkYourLpa": "Gwiriwch eich LPA",
     "whatIfIWantToMakeChanges": "Welsh",
-    "whatIfIWantToMakeChangesContent": "welsh",
+    "whatIfIWantToMakeChangesContent": "<p>welsh</p>",
+    "idVerifiedTag": "Welsh",
     "lpaDecisions": "Penderfyniadau LPA",
     "typeOfLpa": "Math o LPA",
     "WhenTheLpaCanBeUsed": "Pryd gall eich atwrneiod ddefnyddio eich LPA",
