--- a/app/lang/en.json
+++ b/app/lang/en.json
@@ -220,7 +220,8 @@
     "selectHappyToShareLpa": "Select that you are happy to share your LPA with your certificate provider",
     "checkYourLpa": "Check your LPA",
     "whatIfIWantToMakeChanges": "What if I want to make a change to the LPA?",
-    "whatIfIWantToMakeChangesContent": "",
+    "whatIfIWantToMakeChangesContent": "<p></p>",
+    "idVerifiedTag": "ID Verified",
     "lpaDecisions": "LPA decisions",
     "typeOfLpa": "Type of LPA",
     "WhenTheLpaCanBeUsed": "When the LPA can be used",
